<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/back_rectangle_rounded_white"
    android:orientation="vertical"
    android:paddingTop="24dp"
    android:paddingStart="24dp"
    android:paddingEnd="24sp"
    android:fitsSystemWindows="true"
    android:paddingBottom="32dp">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/century_gothic"
        android:gravity="center"
        android:text="@string/informacion"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txtContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/century_gothic"
        android:gravity="center"
        android:text="@string/texto_de_informacion"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnOK"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_white_timer"
        android:fontFamily="@font/century_gothic"
        android:text="@string/aceptar"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />


</LinearLayout>