<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondodegradado"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/century_gothic"
            android:text="@string/msm_superior"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtTime"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_white_timer"
            android:elevation="2dp"
            android:fontFamily="@font/century_gothic"
            android:gravity="center"
            android:text="@string/format_time"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_white_timer"
            android:elevation="2dp"
            android:fontFamily="@font/century_gothic"
            android:gravity="center"
            android:text="@string/format_date"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="26sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="140dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/placa2" />

            <EditText
                android:id="@+id/edtPlaca"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@android:color/transparent"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789-"
                android:fontFamily="@font/century_gothic"
                android:gravity="center"
                android:hint="@string/format_license_plate"
                android:maxLength="8"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btnCheck"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginTop="70dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:scaleType="fitXY"
                android:layout_centerInParent="true"
                android:src="@drawable/btn_orange" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:fontFamily="@font/century_gothic"
                android:text="@string/consultar"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/txtVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="12dp"
        android:gravity="bottom"
        android:text="@string/version"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/imgInfo"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_info_orange_24dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"/>

</RelativeLayout>